<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uiConversation.ConversationFragment">

    <ImageView
        android:id="@+id/conversation_fragment_profile_picture"
        android:isScrollContainer="false"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:contentDescription="@string/friends_profile_pic"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ImageView>

    <TextView
        android:id="@+id/conversation_fragment_name"
        android:isScrollContainer="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/hello_blank_fragment"
        android:textColor="@color/blue_primary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintStart_toEndOf="@+id/conversation_fragment_profile_picture"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/conversation_fragment_settings"
        android:isScrollContainer="false"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:contentDescription="@string/conversation_settings"
        android:src="@drawable/settings"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ImageView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/conversation_fragment_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/text_message"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline8">
    </androidx.recyclerview.widget.RecyclerView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="73dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9015048" />

    <!-- TODO MAKE THIS EDIT TEXT PRETTIER !-->
    <EditText
        android:id="@+id/conversation_fragment_input"
        android:hint="@string/Aa"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_width="0dp"
        android:background="@drawable/rounded_edit_text"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/conversation_fragment_send_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        android:inputType="text"
        android:importantForAutofill="no">
    </EditText>

    <ImageView
        android:src="@drawable/send"
        android:id="@+id/conversation_fragment_send_message"
        android:layout_marginHorizontal="10dp"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        android:contentDescription="@string/send_message">
    </ImageView>




</androidx.constraintlayout.widget.ConstraintLayout>